--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,6 +32,17 @@ services:
       timeout: 5s
       retries: 10
 
+  postgres:
+    image: postgres:latest
+    environment:
+      POSTGRES_DB: auction
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: Auction@123
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
   auction:
     image: golang:1.22-alpine
     container_name: auction
@@ -41,17 +52,18 @@ services:
       sh -c "cd /app && go build -o auction-service && ./auction-service"
     ports:
       - "8080:8080"
-      - "5432:5432"
     restart: always
     depends_on:
       kafka:
         condition: service_healthy
+      postgres:
+        condition: service_started
     environment:
       - KAFKA_BROKER=kafka:9092
-      - DB_HOST=host.docker.internal
+      - DB_HOST=postgres
       - DB_PORT=5432
       - DB_USER=postgres
-      - DB_PASSWORD=yourpassword
+      - DB_PASSWORD=Auction@123
       - DB_DATABASE=auction
       - DB_SSL=disable
 
@@ -102,3 +114,6 @@ services:
         condition: service_healthy
     environment:
       - KAFKA_BROKER=kafka:9092
+
+volumes:
+  pgdata:
